# askiku-jobs-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/askiku_jobs/: __init__.py  cli.py  jobs.py  storage.py
tests/: test_jobs_monitor.py
